high contrast fix in Network tool's panel
Bug: 1048378

--- a/front_end/event_listeners/eventListenersView.css
+++ b/front_end/event_listeners/eventListenersView.css
@@ -90,4 +90,8 @@
     .tree-outline-disclosure:hover li.parent::before {
         background-color: ButtonText;
     }
+    .tree-outline li:hover .tree-element-title,
+    .tree-outline li.selected .tree-element-title {
+        color: ButtonText;
+    }
 }
