--- a/front_end/ui/treeoutline.css
+++ b/front_end/ui/treeoutline.css
@@ -205,4 +205,15 @@ ol.tree-outline:not(.hide-selection-when-blurred) li.selected:focus * {
         forced-color-adjust: none;
         background-color: Highlight;
     }
+    .tree-outline li:hover .tree-element-title,
+    .tree-outline li.selected .tree-element-title,
+    .tree-outline li[data-keyboard-focus="true"]:focus .tree-element-title {
+        forced-color-adjust: none;
+        color: HighlightText;
+    }
+    .tree-outline li:hover [is=ui-icon].icon-mask,
+    .tree-outline li.selected [is=ui-icon].icon-mask,
+    .tree-outline li.selected:focus .spritesheet-mediumicons:not(.icon-mask) {
+        background-color: HighlightText !important;
+    }
 }
